<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/stb_arcul_triumf_blurred"
    >


    <ImageView
        android:id="@+id/registerPage_companylogo"
        android:layout_width="359dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_stb"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/registerPage_tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_page_intro_message"
        style="@style/textViewStyle"
        android:shadowRadius="5"
        android:shadowColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_companylogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPage_til_first_name"
        style="@style/tilStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_tv_about">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPage_tiet_first_name"
            style="@style/tietStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_page_tiet_firstname"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPage_til_last_name"
        style="@style/tilStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/registerPage_til_first_name"
        app:layout_constraintTop_toBottomOf="@id/registerPage_tv_about">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPage_tiet_last_name"
            style="@style/tietStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_page_tiet_surname"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPage_til_email"
        style="@style/tilStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_til_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPage_tiet_email"
            style="@style/tietStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_page_tiet_email"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPage_til_password"
        style="@style/tilStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPage_tiet_password"
            style="@style/tietStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_page_tiet_password"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPage_til_repeat_password"
        style="@style/tilStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@id/registerPage_til_password"
        app:layout_constraintTop_toBottomOf="@id/registerPage_til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPage_tiet_repeat_password"
            style="@style/tietStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_page_hint_confirm_password"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerPage_tv_gender"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/register_page_tv_gender"
        android:textAlignment="center"
        android:textColor="@color/stb_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/registerPage_spn_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_til_password" />

    <Spinner
        android:id="@+id/registerPage_spn_gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:entries="@array/genders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/registerPage_tv_gender"
        app:layout_constraintTop_toBottomOf="@id/registerPage_til_password"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/registerPage_tv_birthdate"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/register_page_tv_date_of_birth"
        android:textAlignment="center"
        android:textColor="@color/stb_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/registerPage_btn_edit_dateOfBirth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_tv_gender" />

    <Button
        android:id="@+id/registerPage_btn_edit_dateOfBirth"
        style="@style/buttonStyle"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/register_page_default_birthdate_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/registerPage_fab_createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/registerPage_tv_birthdate"
        app:layout_constraintTop_toBottomOf="@id/registerPage_spn_gender" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/registerPage_fab_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/button_to_create_account"
        app:backgroundTint="@color/stb_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toEndOf="@id/registerPage_fab_back"
        app:layout_constraintTop_toBottomOf="@id/registerPage_btn_edit_dateOfBirth"
        app:layout_constraintVertical_bias="0.74"
        app:srcCompat="@drawable/ic_baseline_person_add_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/registerPage_fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@color/stb_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registerPage_fab_createAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPage_tv_birthdate"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>