<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/stb_arcul_triumf_blurred"
    >

    <ImageView
        android:id="@+id/loginPage_companylogo"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_marginTop="32dp"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPage_til_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPage_companylogo"
        style="@style/tilStyle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPage_tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/hint_tiet_email_address"
            style="@style/tietStyle"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPage_til_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/tilStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPage_til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPage_tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/hint_tiet_password"
            android:autofillHints="password"
            style="@style/tietStyle"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/loginPage_checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_light"
        android:padding="20dp"
        android:buttonTint="@color/white"
        android:text="@string/login_page_remember_me_checkbox_text"
        android:textColor="@color/stb_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPage_til_password"
        android:textSize="20sp"
        android:textStyle="bold">

    </CheckBox>

    <Button
        android:id="@+id/loginPage_btn_login"
        style="@style/buttonStyle"
        android:textColor="@color/stb_red"
        android:backgroundTint="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:elevation="10dp"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_authentificate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPage_checkbox_remember_me"


       />

    <TextView
        android:id="@+id/loginPage_tv_gotoregister"
        style="@style/textViewStyle"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_now_tv_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPage_btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>